--- a/_posts/thesis_chapters/2025-6-5-Design_v14.md
+++ b/_posts/thesis_chapters/2025-6-5-Design_v14.md
@@ -412,35 +412,31 @@ the video data analysed in the following chapter shows an increase in participan
 
 ### Contradiction area 3: tensions and barriers in cultural aspects of the game-making activity
 
-#### Description of what happened
-
-This section addresses an area of contradiction related to cultural aspects of the game-making activity, which while covered last in this chapter, is foundational to the thesis. At times in the interventions, in line with existing research [^28], some participants experienced alienation from the process of coding. Early in Phase 1, I had incorporated several non-coding techniques to foster positive affect and create an inclusive learning environment. These included: playing and analysing retro arcade and console games, drama games as session warm ups, a process drama [^29], sketching pixel art on paper, digital pixel art creation, loosely structured ideation sessions to decide on themes, and sessions on music making and audio effects creation using accessible tools. While this wide diversity of activities was later streamlined for later phases [^30], the initial impact of these more accessible creative on the general culture of the group appeared positive in line with existing research [^31].  
-
 <!-- MOVEDEarly sessions included playing and discussing retro arcade games, analysing their components, brainstorming game story scenarios, creating pixel-art characters on paper, and making craft collages representing game levels. These multimodal and low-tech activities helped surface ideas, supported collaborative group dynamics, and eased participants into the creative space without the pressure of unfamiliar digital tools. -->
 
-Some participants experienced a sense of exclusion from the culture of the group during the transition from these initial activities to coding: a process now illustrated using a case study of one family. The family consisted of Anastasia, the mother, and her two daughters, one at the lower end of our 8-12 age range and one at the upper end. Members of this family actively participated in non-coding activities, tensions emerged when the introduced coding framework was introduced and the limitations became clearer. The framework of a two dimensional game did not support a key gameplay idea that the younger child had imagined in the previous ideation stage: specifically a exploring a three dimensional landscape from the point of view of a bee avatar [^32]. This realisation was very upsetting to the child and required extensive negotiation with Anastasia leading and myself contributing to a process of explaining the limitations of our beginners coding course.  At a later stage of Phase 1 the whole family experienced alienation. As the phase had progressed, an organic division of labour had occurred with some members sticking with graphical and audio asset creation and others working on incorporating these assets and ideas into the code framework. As session progressed there was progressively less for the non-coders to do. During participant feedback, Anastasia shared that in one session they had arrived a little late, and after observing other participants around them immersed in problem solving using text code tools, felt like they were surrounded by a process of _hardcore coding_ (participants phrase) that felt disconnected from.
+#### Description of what happened
 
-As participants moved from early-stage ideation, and asset creation, the flexible, diverse, and decentralised working practices gave way to a narrower set of expected competencies.  This experience was not isolated with this family.  In interview data parent Maggie noted that "I was worried we (her and other son John) neglected Toby" in relations to this stage where smaller clusters of the group grappled with code implementation of graphical, audio elements and other design element created by the wider group.
+This section addresses an area of contradiction related to cultural aspects of the game-making activity, which while covered last in this chapter, is foundational to the thesis. At times in the interventions, in line with existing research [^28], some participants experienced alienation from the process of coding. Early in Phase 1, I had incorporated several non-coding techniques to foster positive affect and create an inclusive learning environment. These included: playing and analysing retro arcade and console games, drama games as session warm ups, a process drama [^29], sketching pixel art on paper, digital pixel art creation, loosely structured ideation sessions to decide on themes, and sessions on music making and audio effects creation using accessible tools. While this wide diversity of activities was later streamlined for later phases [^30], the initial impact of these more accessible creative on the general culture of the group appeared positive in line with existing research [^31]. It was a transition away from a period involving the widespread use of of these non-programming techniques towards one more dominated by text-coding and the use of related tools where some participants experienced a sense of exclusion from the culture of the group.
 
-In my journal, I noted that group work at this stage felt disjointed with non-coders left with little to do  and a feeling that the previously playful culture was transforming into something more serious. I reflected on the fragility of learners’ positive affect and the possibility of alienation during the transition from the planning and sketching phase to the coding phase.
+This alienation is now illustrated using a case study of one family consisting of Anastasia, the mother, and her two daughters, one at the lower end of our 8-12 age range and one at the upper end. Members of this family actively participated in non-coding activities, tensions emerged when the introduced coding framework was introduced and the limitations became clearer. The framework of a two dimensional game did not support a key gameplay idea that the younger child had imagined in the previous ideation stage: specifically a exploring a three dimensional landscape from the point of view of a bee avatar [^32]. This realisation was very upsetting to the child and required extensive negotiation with Anastasia leading and myself contributing to a process of explaining the limitations of our beginners coding course. This episode marks an echo to the previous tensions of C1 related to tool use but amplified by the strong emotions of the child.
+
+Two sessions later, the whole family experienced alienation. As the phase had progressed, an organic division of labour had occurred with some members sticking with graphical and audio asset creation and others working on incorporating these assets and ideas into the code framework. As participants moved from early-stage ideation, and asset creation, the flexible, diverse, and decentralised working practices gave way to a narrower set of expected competencies. As sessions progressed there was progressively less for the non-coders to do. During participant feedback, Anastasia shared that in one session they had arrived a little late, and after observing other participants around them immersed in problem solving using text code tools, felt like they were surrounded bys a process of _hardcore coding_ (participants phrase) that felt disconnected from.
+
+This experience was not isolated with this family.  In interview data parent Maggie noted that "I was worried we (her and other son Jay) neglected Toby" in relations to this stage where smaller clusters of the group grappled with code implementation of graphical, audio elements and other design element created by the wider group. In my journal, I noted that group work at this stage felt disjointed with non-coders left with little to do  and a feeling that the previously playful culture was transforming into something more serious. I reflected on the fragility of learners’ positive affect and the possibility of alienation during the transition from the planning and sketching phase to the coding phase.
 
 <!-- Finally, it highlighted a potential imbalance in facilitator attention, as participants more confident in coding sometimes created complex problems requiring significant time, which could leave others feeling less supported or valued. -->
 
-#### Surfaced tensions and framed contradiction
+#### Surfaced tensions, barriers and resulting contradiction
 
-These reflection show two strands of tension between activity system elements.  
-One tension is between the object of working together and the emerging norms requiring a close engagement with the technical aspects of coding and a shift in division of labour prioritising these aspects.
+These reflection show two strands of tension between activity system elements. One tension is between the object of working together and the emerging norms requiring a close engagement with the technical aspects of coding and a shift in division of labour prioritising these aspects. Another tension concerned division of labour. To participate fully in later design stages, participants would need to engage with text-based code regardless of their previous (and perhaps preferred) working practices. In addition,  given that coding activities were on going by others attempts to incorporate these team members at this stage would be disruptive to those existing divisions of labour.
 
-Another tension concerned division of labour. To participate fully in later design stages, participants would need to engage with text-based code regardless of their previous (and perhaps preferred) working practices. In addition,  given that coding activities were on going by others attempts to incorporate these team members at this stage would be disruptive to those existing divisions of labour.
+![Fig 5.x – A contradiction between subject experience and the evolving involving cultural layer of the game-making activity](./Pictures/At_tension_2_v3.png){width=95%}
 
 These tensions combined with previously explored cultural barriers to coding to expose a contradiction between the object of the activity, inclusive game-making allowing diverse creative contributions, and the cultural layer of activity [@engestrom_activity_1999]. The accumulated contradiction is illustrated in Figure 5.x.
 
-![](./Pictures/At_tension_2_v3.png){width=95%}
 
-Fig 5.x – A contradiction between subject experience and the evolving involving cultural layer of the game-making activity
+The contradiction and subsequent feeling of alienation occurred despite a learning environment which included diverse and inclusive elements informed by previous research, suggesting that treating such activities as an "add-on" causes difficulties. The process of introducing accessible non-coding activities served to help acculturation to game making process in general, but as text coding was required later, the process only delayed alienation for some participants. Indeed, the process potentially heightens frustration if participants have invested into a process which they are later alienated from. In P1 feedback, the parent Anastasia suggested more hands-on exploration with the tools of production before being required to make creative decisions [^33]. As such, addressing this contradiction required rethinking not only the technical scaffolds, as outline above, to allow such early interaction with tools, but in addition the accommodations to include the contributions involving visual design, sound production, and narrative development should happen in an on-going, balanced fashion.
 
-
-The contradiction and subsequent feeling of alienation occurred despite a learning environment which included diverse and inclusive elements informed by previous research. The process of introducing accessible non-coding activities served to help acculturation to game making process in general, but as text coding was required later, the process only delayed alienation for some participants. Indeed, the process potentially heightens frustration if participants have invested into a process which they are later alienated from.  As such, addressing this contradiction required rethinking not only the technical scaffolds, as outline above, but also the broader cultural framing of participation to accommodate the contributions involving visual design, sound production, and narrative development in an on-going fashion, and a process to involve all participants in coding earlier on.
 
 <!-- Although issues of mediation of technical tools played a role in this disengagement, this section has tensions address cultural dimensions.  The shift in the object of activity, from playful design to more technical production, exposed a misalignment between participants' creative goals and the community norms forming around coding. -->
 
@@ -450,53 +446,35 @@ The contradiction and subsequent feeling of alienation occurred despite a learni
 
 #### Design response
 
-The responses outlined in C1 and C2 above concerning software tools and documentation addressed some aspects of this contradiction. For examples, in P1 feedback, the parent Anastasia suggested more hands-on exploration with the tools of production before being required to make creative decisions [^33].
+As previously outlined (see C1 and C2), changes in  tools and documentation meant participants had a positive impact. The use of a template and quick start cards facilitated a shareable game from early stages, and varied points of entry into the activity. Participants were increasingly able to work either individually or in small groups, often alongside family members (duplication?). This helped to reduce the kind of role-based exclusions seen in the case described above, where non-coding contributions became marginalised as the process continued. In particular, the structuring of resources around an episodic process of applying one GDP after another, shifted the pattern of the design process away from a design-build-test progression in a way which allowed for greater balance between coding and non-coding activities.
 
-As previously outlined, the introduction of a half-baked game template in Phase 2 allowed participants to work with a functioning starter game, which could be modified with minimal code changes. This significantly reduced early technical demands and opened up more varied points of entry into the activity. This change had a notable impact on the division of labour from Phase 2 onwards. Participants were increasingly able to work either individually or in small groups, often alongside family members. This helped to reduce the kind of role-based exclusions seen in the case described above, where non-coding contributions became marginalised as the process continued.
+In additions, the following design interventions were introduced in P2 and P3 to respond to tensions outlined above, via these strategies also served to realign cultural dimensions of the activity system, supporting more inclusive and flexible forms of participation.
 
-In addition, the structuring of resources around an episodic process of applying one GDP after another, shifted the pattern of the design process away from a design-build-test progression in a way which allowed for more ongoing balance between coding and non-coding activities.
-
-The following design interventions were introduced in P2 and P3 to respond to these tensions via these strategies also served to realign cultural dimensions of the activity system, supporting more inclusive and flexible forms of participation.
-
-##### Social coding processes via playtesting
+##### Social coding processes via playtesting (and maker types)
 
 <!-- WHERE ELSE IS PLAYTESTING COVERED? HOW TO LINK -
  - BACK INTO CHAPTER 2? VIA REPENNING? FLOW SOCIAL
  CONCEPTS OF FLOW AND ENGAGEMENT - AND Fluency IN cH. 6. -->
 
-The structural changes of starting template meant that players starting with a game in a working state. Thus if changes were carried out in small iterations each change could be self-tested and shared with others via group / social playtesting. This increased the time participants spent playtesting both their own and others’ games dramatically. The process of playtesting became increasingly significant in P2 in a way which transcended an instrumental design process of revision. It took on important social and cultural value.
+A greater time with the game in a working state, and changes were carried out in small iterations, allowed each change to be self-tested and shared with others via group playtesting.  As well as greater time spent playtesting both their own and others’ games dramatically, playtesting became increasingly significant beyond an instrumental testing process, to encompass important social and cultural dimensions. By the mid-point of P2, playtesting had evolved into a key site of peer exchange, prompting spontaneous sharing of advice, assets, and debugging approaches.
 
-By the middle of P2, playtesting had evolved into a key site of peer exchange, prompting spontaneous sharing of advice, assets, and fixes.
+Video data captured instances where participants expressed frustration when errors rendered their games unplayable (see Vignette 2). While this frustration was natural for participants blocked in progression, I also felt urgency in my response. In response, I prioritised support to participants with games in a broken stage to make them and playable again so that they did not miss out the valuable experience of playtesting.
 
-Video data captured instances where participants expressed frustration when errors rendered their games unplayable (see Vignette 2). While this frustration was natural for participants blocked in progression, I also felt urgency in my response. In response, I prioritised support to participants with games in a broken stage to make them and playable again so that they did not miss out the valuable experience of social playtesting.
+This prioritisation was driven in part as it became apparent to me that different people gained different things from the playtesting process, using it not only for practical testing, but also to find out new ideas, and for wider purposes. My journal notes on playtesting behaviour, later confirmed by video and interview data, detail observations on emerging variety in the activities and modes of interaction. Patterns include: playtesting behaviours that helped form social connections (often adopted by parents), playful bordering on raucous clusters of young people, more sneaky behaviour in designing against game conventions [^33a].  These observations show productive chaos at work and participants clearly experiencing flow in their playful playtesting.
 
-The characteristic of flow within a social and cultural settings felt very important and evocative to me as a facilitator. This recalls the work of Basawapatna on proximal flow [-@basawapatna_zones_2013] [^34], however the structure of the design varies that of SDG considerably. Whereas in SDG, X, HERE Y.
-
-
-SIGNPOST MORE TO CH.6?
-
-The role of playtesting is explored in relation to he use of GDPs in Chapter in part through a lens of increasing fluency.  
-
-FLOW SOCIAL - PLAYFUL PLAYTESTING?
-CONCEPTS OF FLOW AND ENGAGEMENT - AND Fluency IN cH. 6.
-
-PLAYFUL PLAYTESTING?
+The characteristic of flow within a social and cultural settings felt very important and evocative to me as a facilitator. This recalls the work of Basawapatna on proximal flow [-@basawapatna_zones_2013] [^34], however the structure of the design varies that of SDG considerably. Whereas in SDG, instruction was linear in nature, here the choice based approaches allowed a far greater potential for productive peer interaction. Observations on the role of playtesting are explored in relation to the use of GDPs in Chapter 6, through a lens of increasing fluency and agency.
 
 
-**Playful playtesting and maker types:**
-
-My journal notes on playtesting behaviour, later confirmed by video and interview data, detail observations on emerging variety in the activities and modes of interaction. Patterns include: playtesting behaviours that helped form social connections (often adopted by parents), playful bordering on raucous clusters of young poeple [see playful.playtesting], more sneaky behaviour in designing against game conventions,  
-
-SUMMARY
 
 To advance the potential of playtesing interactions, in P3, began to intervene gently but strategically to nurture these emergent practices of social coding and mutual aid.
-
 
 
 ##### Use of side missions to encourage varied creative practices
 
 CROSS REFERENCE THIS WITH AP
 PENDIX AND CHAPTER 7 - IDENTITIES IN PARTICULAR
+
+The first of these interventions was that of the use of side missions within a drama frame with an aim of encouraging varied playtesting  practices (MORE SPECIFIC).
 
 In P3, I introduced a narrative framework to scaffold participant engagement in the form of a fictional scenario in which an alien civilisation contacted the group and demanding participants upload games to allow the aliens to assess the worth of the human race [^35]. Within this scenario, participants were assigned printed side missions [^36], some public and some some secret, that encouraged interaction, exploration, and humour. These missions often involved social behaviours not directly related to game creation, that correlated to different approaches I had observed emerging organically in the play testing periods of P2. Examples of these missions are included in the extract in Table 5.sidemissions.
 
@@ -749,12 +727,14 @@ Gilbert is the worsted name.
 
 [^30]: The immediate tension that the diverse tool set brought was in how much time playing with such a diverse set of non-coding practices took. In addition the greater diversity reduced the possibility or at least the fluency of peer learning that happened in later phases.
 
-[^31]: Research  particular on varied approaches to address alienation to coding games has been explored in Chapters 1 and 2. In particular see the work of by Kafai, Burke and Peppler [@kafai_constructionist_2015; @peppler_gaming_2009-1].
+[^31]: TRY TO SUMMARISE IMPACT HERE FOR C1&2? - Research  particular on varied approaches to address alienation to coding games has been explored in Chapters 1 and 2. In particular see the work of by Kafai, Burke and Peppler [@kafai_constructionist_2015; @peppler_gaming_2009-1].
 
 
 [^32]: More detail of the engagement and disengagement of Anastasia's family is described in the case study Appendix 5.bee,
 
 [^33]: Fuller feedback is described in the Appendix 5.bee
+
+[^33a]: see playful.playtesting
 
 [^34]: In SGD the concept of proximal flow links flow theory and social engagement within the learning  [@basawapatna_zones_2013].
 
