up to discussion section

--- a/_posts/thesis_chapters/2025-6-5-Design_v14.md
+++ b/_posts/thesis_chapters/2025-6-5-Design_v14.md
@@ -458,25 +458,16 @@ In additions, the following design interventions were introduced in P2 and P3 to
 
 A greater time with the game in a working state, and changes were carried out in small iterations, allowed each change to be self-tested and shared with others via group playtesting.  As well as greater time spent playtesting both their own and others’ games dramatically, playtesting became increasingly significant beyond an instrumental testing process, to encompass important social and cultural dimensions. By the mid-point of P2, playtesting had evolved into a key site of peer exchange, prompting spontaneous sharing of advice, assets, and debugging approaches.
 
-Video data captured instances where participants expressed frustration when errors rendered their games unplayable (see Vignette 2). While this frustration was natural for participants blocked in progression, I also felt urgency in my response. In response, I prioritised support to participants with games in a broken stage to make them and playable again so that they did not miss out the valuable experience of playtesting.
+Video data captured instances where participants expressed frustration when errors rendered their games unplayable (see Vignette 2). While this frustration was natural for participants blocked in progression, I also felt urgency in my response. In response, I prioritised support to participants with games in a broken stage to make them and playable again so that they did not miss out the valuable experience of playtesting. This prioritisation was driven in part as it became apparent to me that different people gained different things from the playtesting process, using it not only for practical testing, but also to find out new ideas, and for wider purposes. My journal notes on playtesting behaviour, later confirmed by video and interview data, detail observations on emerging variety in the activities and modes of interaction. Patterns include: playtesting behaviours that helped form social connections (often adopted by parents), playful bordering on raucous clusters of young people, more sneaky behaviour in designing against game conventions [^33a].  These observations show productive chaos at work and participants clearly experiencing flow in their playful playtesting.
 
-This prioritisation was driven in part as it became apparent to me that different people gained different things from the playtesting process, using it not only for practical testing, but also to find out new ideas, and for wider purposes. My journal notes on playtesting behaviour, later confirmed by video and interview data, detail observations on emerging variety in the activities and modes of interaction. Patterns include: playtesting behaviours that helped form social connections (often adopted by parents), playful bordering on raucous clusters of young people, more sneaky behaviour in designing against game conventions [^33a].  These observations show productive chaos at work and participants clearly experiencing flow in their playful playtesting.
-
-The characteristic of flow within a social and cultural settings felt very important and evocative to me as a facilitator. This recalls the work of Basawapatna on proximal flow [-@basawapatna_zones_2013] [^34], however the structure of the design varies that of SDG considerably. Whereas in SDG, instruction was linear in nature, here the choice based approaches allowed a far greater potential for productive peer interaction. Observations on the role of playtesting are explored in relation to the use of GDPs in Chapter 6, through a lens of increasing fluency and agency.
-
-
-
-To advance the potential of playtesing interactions, in P3, began to intervene gently but strategically to nurture these emergent practices of social coding and mutual aid.
+The characteristic of flow within a social and cultural settings felt very important and evocative to me as a facilitator. This recalls the work of Basawapatna on proximal flow [-@basawapatna_zones_2013] [^34], however the structure of the design varies that of SDG considerably. Whereas in SDG, instruction was linear in nature, here the choice based approaches allowed a far greater potential for productive peer interaction. Observations on the role of playtesting are explored in relation to the use of GDPs in Chapter 6, through a lens of increasing fluency and agency. To advance the potential of these diverse playtesing interactions, in P3, I began to intervene gently but strategically to nurture these emergent practices of social coding and mutual aid.
 
 
 ##### Use of side missions to encourage varied creative practices
 
-CROSS REFERENCE THIS WITH AP
-PENDIX AND CHAPTER 7 - IDENTITIES IN PARTICULAR
+<!-- CROSS REFERENCE THIS WITH APPENDIX AND CHAPTER 7 - IDENTITIES IN PARTICULAR -->
 
-The first of these interventions was that of the use of side missions within a drama frame with an aim of encouraging varied playtesting  practices (MORE SPECIFIC).
-
-In P3, I introduced a narrative framework to scaffold participant engagement in the form of a fictional scenario in which an alien civilisation contacted the group and demanding participants upload games to allow the aliens to assess the worth of the human race [^35]. Within this scenario, participants were assigned printed side missions [^36], some public and some some secret, that encouraged interaction, exploration, and humour. These missions often involved social behaviours not directly related to game creation, that correlated to different approaches I had observed emerging organically in the play testing periods of P2. Examples of these missions are included in the extract in Table 5.sidemissions.
+The first of these interventions was that of the use of side missions within a drama frame with an aim of encouraging varied playtesting practices. In P3, I introduced a narrative framework to scaffold participant engagement in the form of a fictional scenario. An alien civilisation contacted the group after seeing the games published in p2. They demanded participants upload more games to allow the aliens to assess the worth of the human race [^35]. Within this scenario, participants were assigned printed side missions not directly related to game creation [^36], some public and some some secret, that encouraged forms of interaction and exploration with playtesting similar to those described above. Examples of these missions are included in the extract in Table 5.sidemissions.
 
 | **Your Alien Mission (social)** | **Your Secret Alien Mission** |
 |--------------------------------|-------------------------------|
@@ -486,8 +477,7 @@ In P3, I introduced a narrative framework to scaffold participant engagement in 
 
 **Table 5.sidemissions – an extract of side missions given as part of the drama scenario**
 
-The side missions were designed to support playful social dynamics and to foster a sense of shared community. By encouraging participants to engage with others’ work in imaginative ways, they helped shift the focus away from individual technical mastery and towards relational creativity. In line with third-generation activity theory, these missions acted as secondary stimuli that restructured the activity context and opened up new pathways for agency development. They positioned observation, playfulness, and curiosity as legitimate ways of participating, helping to validate roles beyond that of the coder.
-
+The side missions, in support playful social dynamics, aimed to shift the focus away from individual technical mastery and towards creativity within a shared community.
 
 <!-- #### SUMMARY AND LINK
 
@@ -497,17 +487,16 @@ A more detailed exploration of the development of participant agency in relation
 
 #### Brief Analysis
 
+While this section presents only a partial account of the missions and the drama-based approach in which they were presented [^36], these missions can be interpreted as design artefacts that mediated both cultural and affective engagement, making space for diverse learners to see themselves as legitimate participants in the game making space. In line with theory on formative interventions, these missions acted as secondary stimuli opening up new pathways for agency development [@hopwood_agency_2022]. They positioned observation, playfulness, and curiosity as legitimate ways of participating, helping to validate roles beyond that of a (_hardcore_) coder.
 
-Within the broader CHAT–DBR framework of this thesis, these missions can be understood as design artefacts that mediated both cultural and affective engagement, making space for diverse learners to see themselves as legitimate part
+Their inclusion in the design was an significant response to the contradictions described above.
 
-While this section presents only a partial account of the missions and the drama-based approach [footnote & appendix ], their inclusion in the design was a response to the contradictions described above.
+In addition, it is also of value to briefly explore what is missing from the learning design as a way of beginning analysis of what barriers have thus been circumvented though omission.  This study differs from much of the research in the domain of CGD&P in that cultural and social aspects of the learning design are prioritise over the personal appropriation of computing concepts and practices. After P3 I created a map of learning dimension based broadly on the work of Brennan and Resnick [^37], of concepts that suit exploration via these game making activities. However, given the sensitivity to alienation from programming culture shown in this section, and the fruitful nature of the peer playtesting activities. I did not prioritise the introduction of these concepts, or activities to teach or activities to reflect on how they were used retrospectively, adaptations that would suit migration to a computing classroom.   
 
 
-MORE SIGNPOSTING? Chapter 7 focuses on analysing participant reactions to the design from a more cultural perspective in greater depth and contains a more detailed exploration of how these elements contributed to the development of agency is provided.  
+MORE SIGNPOSTING? 
 
-NOT SURE WHERE TO PLACE THIS EXACTLY? LATER?
-This study differs from much of the research in the domain of CGD&P in that cultural and social aspects of the learning design are prioritise over the personal appropriation of computing concepts and practices. This is not to say that these concepts are not suitable for appropriation via participation in these activities. In Chapter 6, I present a framework of concepts that suit exploration via these game making activities as a proposed map of learning dimensions [^37]. However, given the sensitivity to alienation from programming culture shown in this section, and the fruitful nature of the peer playtesting activities. I did not prioritise the introduction of these concepts, or activities to teach or activities to reflect on how they were used retrospectively, adaptations that would suit migration to a computing classroom.   
-
+Chapter 7 focuses on analysing participant reactions to the design from a more cultural perspective in greater depth and contains a more detailed exploration of how these elements contributed to the development of agency is provided.  
 
 
 ## Chapter Discussion
@@ -743,7 +732,9 @@ Gilbert is the worsted name.
 [^36]: Side missions or side quests are a concept from video games involving exploration. They complement main missions and offer greater choice over player experience.
 
 
-[^37]: The term map of learning dimensions . The map includes: computational thinking, systems thinking, computing concepts and practices.
+[^36]: The drama narrative builds on work of Rebecca Patternson, Alison and myself [@patterson ]. It
+
+[^37]:   The term map of learning dimensions . The map includes: computational thinking, systems thinking, computing concepts and practices. In Chapter 6, I present a framework of concepts.
 
 
 [^38]: The process of having to change the underlying structure of the template in P1 was something that one group found particularly jarring. An experience outlined in interview data (Maggie 1) and in Appendix.tech
