--- a/_posts/thesis_chapters/2025-6-5-Design_v14.md
+++ b/_posts/thesis_chapters/2025-6-5-Design_v14.md
@@ -491,10 +491,12 @@ While this section presents only a partial account of the missions and the drama
 
 Their inclusion in the design was an significant response to the contradictions described above.
 
-In addition, it is also of value to briefly explore what is missing from the learning design as a way of beginning analysis of what barriers have thus been circumvented though omission.  This study differs from much of the research in the domain of CGD&P in that cultural and social aspects of the learning design are prioritise over the personal appropriation of computing concepts and practices. After P3 I created a map of learning dimension based broadly on the work of Brennan and Resnick [^37], of concepts that suit exploration via these game making activities. However, given the sensitivity to alienation from programming culture shown in this section, and the fruitful nature of the peer playtesting activities. I did not prioritise the introduction of these concepts, or activities to teach or activities to reflect on how they were used retrospectively, adaptations that would suit migration to a computing classroom.   
+In addition, it is also of value to briefly explore what is missing from the learning design as a way of beginning analysis of what barriers have thus been circumvented though omission.  For example, I developed a visual process of learners mapping their progression from one GDP to another via a large scale visual map [37b]. Similarly, after P3 I created a map of learning dimension based broadly on the work of Brennan and Resnick [^37], of concepts that suit exploration via these game making activities. However, given the sensitivity to alienation from programming culture shown in this section, and the fruitful nature of the peer playtesting activities. I did not prioritise the introduction of these concepts, or activities to teach or activities to reflect on how they were used retrospectively, adaptations that would suit migration to a computing classroom.   
 
+INTEGRATE ABOVE 
+This study differs from much of the research in the domain of CGD&P in that cultural and social aspects of the learning design are prioritise over the personal appropriation of computing concepts and practices.
 
-MORE SIGNPOSTING? 
+MORE SIGNPOSTING?
 
 Chapter 7 focuses on analysing participant reactions to the design from a more cultural perspective in greater depth and contains a more detailed exploration of how these elements contributed to the development of agency is provided.  
 
@@ -736,6 +738,7 @@ Gilbert is the worsted name.
 
 [^37]:   The term map of learning dimensions . The map includes: computational thinking, systems thinking, computing concepts and practices. In Chapter 6, I present a framework of concepts.
 
+[^37b]: While this process is outlined in Appendix 5.4?, it is not included in the narrative here as while useful for reflection, it lacked full implementation.
 
 [^38]: The process of having to change the underlying structure of the template in P1 was something that one group found particularly jarring. An experience outlined in interview data (Maggie 1) and in Appendix.tech
 
